Nyoba non overflow buat bg vh, kalo ga commit lagi berarti fix

--- a/assets/css/custom-style.css
+++ b/assets/css/custom-style.css
@@ -6,7 +6,7 @@
 .bg-vh {
   height: 100vh;
   min-height: -webkit-fill-available; /* Fallback untuk iOS */
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .animate-scroll-text {
